# animism-cvgl

./: .gitignore  CMakeLists.txt
cvgl-animism/: cvgl_main.cpp
cvgl-animism/cues/: AnimismCues.cpp  MirrorTriangles.hpp  cue_antlers.cpp  cue_black_fadeout_field.cpp  cue_fog_hands.cpp  cue_fog_hands_field.cpp  cue_fuzzball.cpp  cue_heart_continued.cpp  cue_lungs.cpp  cue_origami_bioplastic_mirror.cpp  cue_slow_sunburst.cpp  cue_underwater_deep.cpp  cue_wire_slug.cpp
cvgl-animism/cues/backup/: cue_wire_slug2_m.cpp
cvgl-basic/: basicMainProcess.cpp  basicMainProcess.hpp  cvgl-basic_main.cpp
cvgl-zhdk/: cvglMainProcess.cpp  cvglMainProcess.hpp  cvgl_main.cpp  zhdkMainProcess.cpp  zhdkMainProcess.hpp  zhdk_main.cpp
cvgl-zhdk/cues/: AnimismCues.hpp  MirrorTriangles.cpp  ZhdkCues.hpp  cue_floating_fisheye_blinks.cpp  cue_fuzzball_fadein.cpp  cue_fuzzball_fadeout.cpp  cue_grass_fadeout.cpp  cue_moon_hands_fadeout.cpp  cue_nothing.cpp  cue_pond_edge.cpp  cue_slow_sunburst_fadeout_mirror.cpp  cue_slow_sunburst_mirror_flow.cpp  cue_thunderclap_field.cpp  cue_vignette_circle_drop.cpp  cue_wire_leaf_eating.cpp  cue_wire_slug2_m.cpp
include/: MapOSC.hpp  cvglAnalysisData.hpp  cvglCV.hpp  cvglCameraBase.hpp  cvglContext.hpp  cvglConversions.hpp  cvglCues.hpp  cvglDeckLinkCamera.hpp  cvglFramebuffer.hpp  cvglHelperFunctions.hpp  cvglMixer.hpp  cvglObject.hpp  cvglRandom.hpp  cvglShader.hpp  cvglShaderFramebuffer.hpp  cvglTexture.hpp  cvglTheadPool.hpp  cvglUDPServer.hpp  cvglVideoPlayer.hpp
src/: MirrorTriangles.cpp  animShader1.cpp  animShader1.hpp  basic_fragment.fs  crop_fragment.fs  cvglMainProcess.cpp  cvglMainProcess.hpp  cvgl_main.cpp  flow_repos.fs  fragment.fs  luma_alpha_color.fs  main.cpp  screen_process.fs  screen_vignette.fs  vertex.vs
src/backup/: screen_process.fs
src/camera/: cvglCVCamera.cpp  cvglDeckLinkCamera.cpp  cvglVideoPlayer.cpp
src/cues/: animism-cues.cpp  cvglCues.cpp  lambda-test.cpp  landscape-breath-ackerstadtpalast.cpp
src/cues/acker/: landscape-breath-ackerstadtpalast.cpp
src/cues/animism/: AnimismCues.hpp  cue_antlers.cpp  cue_black_click.cpp  cue_black_silent.cpp  cue_branch_rips_and_falls.cpp  cue_burdock_roll_out.cpp  cue_cam1_click.cpp  cue_cam1_silent.cpp  cue_cam2_silent.cpp  cue_floating_fisheye_blinks.cpp  cue_fog_hands.cpp  cue_fog_hands_field.cpp  cue_forest.cpp  cue_forest_frogs.cpp  cue_forest_loops.cpp  cue_forest_loops_triZ.cpp  cue_fuzzball.cpp  cue_fuzzball_fadein.cpp  cue_fuzzball_fadeout.cpp  cue_grass.cpp  cue_grass_fadeout.cpp  cue_heart1.cpp  cue_heart_continued.cpp  cue_heart_fadein.cpp  cue_heart_fadein_overlay.cpp  cue_leaf_in_slug.cpp  cue_leaf_in_slug_end.cpp  cue_leaf_shell_nest.cpp  cue_leaf_shell_nest_m.cpp  cue_lungs.cpp  cue_moon_hands.cpp  cue_moon_hands_fadeout.cpp  cue_origami_bioplastic_mirror.cpp  cue_pond_edge.cpp  cue_slow_sunburst.cpp  cue_slow_sunburst_distortion.cpp  cue_slow_sunburst_mirror.cpp  cue_slow_sunburst_mirror_flow.cpp  cue_slow_sunburst_mirror_flow2.cpp  cue_slow_sunburst_noise_start.cpp  (+14 more)
src/cues/animism/backup/: cue_leaf_shell_nest.cpp  cue_leaf_shell_nest_m.cpp  cue_sync_wires_m.cpp  cue_wire_slug2.cpp  cue_wire_slug_m.cpp  cue_wire_testing.cpp
src/cues/dev/: animism-cues.cpp
src/cues/plastisphere/: plastisphereCue0.cpp  plastisphereCue1.cpp
src/cv/: cvglAnalysisData.cpp  cvglCV.cpp  cvglConvexHull.cpp
src/gl/: cvglContext.cpp  cvglFramebuffer.cpp  cvglObject.cpp  cvglShader.cpp  cvglShaderFramebuffer.cpp
src/osc/: MapOSC.cpp
src/shaders/: crop_fragment.fs  screen_vignette.fs
src/udp/: cvglUDPServer.cpp
src/utils/: cvglConversions.cpp
src/utils/oscReadWriteFile/: OSC_readwriter.cpp  OSC_readwriter.h
